@@ -1,6 +1,8 @@
 2012-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-view.el (mime-display-text/plain): Minor refactoring.
+	(mime-display-text/richtext, mime-display-text/enriched): Do not
+	use `let'.
 
 2012-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
